[package]
name = "kcp-bindings"
version = "1.1.0"
edition = "2021"
build = "build.rs"
license = "MIT OR Apache-2.0"
keywords = ["hexfellow", "kcp"]
description = "Bindings for the KCP library"
repository = "https://github.com/hexfellow/kcp-bindings"
readme = "README.md"

[dependencies]
tokio = { version = "1.41.0", features = ["full"], optional = true }
anyhow = "1.0.91"
log = "0.4.28"

[features]
hexfellow = ["dep:tokio"]

[build-dependencies]
cc = "1.1"
bindgen = "0.71.0"
